Descriptive text of countdown and prevent zoom on mobile

--- a/vote/vote.css
+++ b/vote/vote.css
@@ -29,13 +29,17 @@ button .smiley {
 }
 
 #waiting {
+    display: none;
+    text-align: center;
+}
+
+#waiting * {
+    color: white;
 }
 
 #waiting #number {
-    margin: 20px auto;
-    color: white;
+    margin: 20px;
     font-size: 100px;
-    text-align: center;
 }
 
 .black {
